--- a/test/st/dynamic_linker/tests/module_with_data_relocation/CMakeLists.txt
+++ b/test/st/dynamic_linker/tests/module_with_data_relocation/CMakeLists.txt
@@ -14,7 +14,7 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see <https://www.gnu.org/licenses/>.
 
-add_library(module_with_data_lib OBJECT)
+add_library(module_with_data_lib STATIC)
 
 target_sources(module_with_data_lib
     PRIVATE
