--- a/src/posix/CMakeLists.txt
+++ b/src/posix/CMakeLists.txt
@@ -20,7 +20,9 @@ set (library_includes ${PROJECT_SOURCE_DIR}/include/msos/posix)
 
 target_sources(msos_posix
     PUBLIC
-        ${CMAKE_CURRENT_SOURCE_DIR}/fork.cpp
+        ${library_includes}/dirent.h
+
+        ${CMAKE_CURRENT_SOURCE_DIR}/dirent.cpp
 )
 
 target_include_directories(msos_posix
@@ -30,8 +32,6 @@ target_include_directories(msos_posix
 )
 
 target_link_libraries(msos_posix
-    PRIVATE
-        msos_kernel_process
-        msos_arch
+    PUBLIC
+        hal
 )
-
