--- a/.gitmodules
+++ b/.gitmodules
@@ -21,4 +21,4 @@
 	url = https://github.com/ulfalizer/Kconfiglib.git
 [submodule "lib/romfs"]
 	path = lib/romfs
-	url = https://github.com/matgla/ms_romfs.git[
+	url = https://github.com/matgla/ms_romfs.git
