--- a/test/st/kernel/spawn_process_from_filesystem/CMakeLists.txt
+++ b/test/st/kernel/spawn_process_from_filesystem/CMakeLists.txt
@@ -23,6 +23,7 @@ target_sources(spawn_process_from_filesystem
 
 target_link_libraries(spawn_process_from_filesystem
     PUBLIC
+        hal
         msos
 )
 
