--- a/test/st/kernel/process_creation_deletion/CMakeLists.txt
+++ b/test/st/kernel/process_creation_deletion/CMakeLists.txt
@@ -24,6 +24,7 @@ target_sources(process_creation_deletion_test
 target_link_libraries(process_creation_deletion_test
     PUBLIC
         msos
+        hal
 )
 
 include (GenerateBinary)
