--- a/src/libc/CMakeLists.txt
+++ b/src/libc/CMakeLists.txt
@@ -28,8 +28,18 @@ target_include_directories(msos_libc
         ${PROJECT_SOURCE_DIR}/include
 )
 
+target_compile_options(msos_libc
+    PUBLIC
+        $<$<COMPILE_LANGUAGE:CXX>:-std=c++2a>
+        $<$<CONFIG:DEBUG>:-Og -g>
+        $<$<CONFIG:RELEASE>:-Os>
+    PRIVATE
+        $<$<COMPILE_LANGUAGE:CXX>:-Werror -Wall -Wextra -Wpedantic -Wconversion -Wcast-align -Wunused -Wshadow -Wold-style-cast -Wpointer-arith -Wcast-qual -Wno-missing-braces>
+)
+
 target_link_libraries(msos_libc
     PRIVATE
         msos_printer
         hal_flags
+        eul_utils
 )
