--- a/src/fs/CMakeLists.txt
+++ b/src/fs/CMakeLists.txt
@@ -24,6 +24,9 @@ target_sources(msos_fs
         ${library_includes}/i_filesystem.hpp
         ${library_includes}/mount_point.hpp
         ${library_includes}/mount_points.hpp
+        ${library_includes}/read_only_filesystem.hpp
+        ${library_includes}/character_file.hpp
+
 
         ${library_includes}/ramfs.hpp
         ${library_includes}/ramfs_data.hpp
@@ -32,13 +35,13 @@ target_sources(msos_fs
         ${library_includes}/romfs.hpp
         ${library_includes}/romfs_file.hpp
 
-        ${library_includes}/usart_file.hpp
-
         ${library_includes}/vfs.hpp
 
         ${library_includes}/utils.hpp
     PRIVATE
         ${CMAKE_CURRENT_SOURCE_DIR}/mount_points.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/character_file.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/read_only_filesystem.cpp
 
         ${CMAKE_CURRENT_SOURCE_DIR}/ramfs.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/ramfs_data.cpp
@@ -46,8 +49,6 @@ target_sources(msos_fs
 
         ${CMAKE_CURRENT_SOURCE_DIR}/romfs.cpp
         ${CMAKE_CURRENT_SOURCE_DIR}/romfs_file.cpp
-
-        ${CMAKE_CURRENT_SOURCE_DIR}/usart_file.cpp
 
         ${CMAKE_CURRENT_SOURCE_DIR}/vfs.cpp
 
