--- a/test/st/dynamic_linker/tests/pass_arg_and_get_return/CMakeLists.txt
+++ b/test/st/dynamic_linker/tests/pass_arg_and_get_return/CMakeLists.txt
@@ -36,17 +36,22 @@ target_link_libraries(module_with_args
 add_module(module_with_args module_with_args)
 
 include(TestUtils)
-
-add_custom_target(
-    module_with_args_generate_test_image
+add_custom_target(module-with-args-generate-image ALL
+    DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/test_binary.bin
+)
+add_custom_command(
+    TARGET module_with_args
+    POST_BUILD
     COMMAND cmake -E remove ${CMAKE_CURRENT_BINARY_DIR}/test_binary.bin
     COMMAND cat ${HOST_WITH_ARGS_BINARY_FILE} ${CMAKE_CURRENT_BINARY_DIR}/module_with_args.bin >
     ${CMAKE_CURRENT_BINARY_DIR}/test_binary.bin
-    DEPENDS host_with_args module_with_args
+    DEPENDS host_with_args module_with_args-generate-binary module_with_args
     VERBATIM
 )
 
-set (run_st_deps "${run_st_deps}" module_with_args_generate_test_image CACHE INTERNAL "")
+add_dependencies(module_with_args host_with_args)
+
+set (run_st_deps "${run_st_deps}" module_with_args CACHE INTERNAL "")
 
 list(FIND BINARIES_FOR_ST "module_with_args:${CMAKE_CURRENT_BINARY_DIR}/test_binary.bin" test_in_list)
 
