--- a/src/drivers/displays/CMakeLists.txt
+++ b/src/drivers/displays/CMakeLists.txt
@@ -1,4 +1,4 @@
-# This file is part of MSOS project. This is simple OS for embedded development devices.
+# This file is part of MSOS project.
 # Copyright (C) 2020 Mateusz Stadnik
 #
 # This program is free software: you can redistribute it and/or modify
@@ -14,37 +14,37 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see <https://www.gnu.org/licenses/>.
 
-add_library(msos_libc)
 
-set (library_includes ${PROJECT_SOURCE_DIR}/include/msos/libc)
+add_library(msos_drivers_displays STATIC)
 
-target_sources(msos_libc
+set (library_includes ${PROJECT_SOURCE_DIR}/include/msos/drivers/displays)
+
+target_sources(msos_drivers_displays
     PUBLIC
-        ${library_includes}/printf.hpp
+        ${library_includes}/ssd1306/ssd1306.hpp
+        ${library_includes}/ssd1306/ssd1306_file.hpp
 
-        # ${library_includes}/stdio.h
-        # ${library_includes}/cstdio
     PRIVATE
-        ${CMAKE_CURRENT_SOURCE_DIR}/printf.cpp
+        ${CMAKE_CURRENT_SOURCE_DIR}/ssd1306/ssd1306_file.cpp
 )
 
-target_include_directories(msos_libc
+target_include_directories(msos_drivers_displays
     PUBLIC
         ${PROJECT_SOURCE_DIR}/include
 )
 
-target_compile_options(msos_libc
+target_compile_options(msos_drivers_displays
     PUBLIC
         $<$<COMPILE_LANGUAGE:CXX>:-std=c++2a>
         $<$<CONFIG:DEBUG>:-Og -g>
         $<$<CONFIG:RELEASE>:-Os>
     PRIVATE
-        $<$<COMPILE_LANGUAGE:CXX>:-Werror -Wall -Wextra -Wpedantic -Wconversion -Wcast-align -Wunused -Wshadow -Wold-style-cast -Wpointer-arith -Wcast-qual -Wno-missing-braces>
+        $<$<COMPILE_LANGUAGE:CXX>:-Werror -Wall -Wextra -Wpedantic -Wcast-align -Wunused -Wshadow -Wpointer-arith -Wcast-qual -Wno-missing-braces>
 )
 
-target_link_libraries(msos_libc
+target_link_libraries(msos_drivers_displays
     PRIVATE
+        eul
         msos_printer
-        hal_flags
-        eul_utils
+        board
 )
